--- a/app/scss/_components.scss
+++ b/app/scss/_components.scss
@@ -1,74 +1,35 @@
 // Buttons
 a.btn,
 button.btn {
-    font-size: inherit;
-    // display: inline-block;
-    display: block;
+    display: inline-block;
     width: 100%;
-    max-width: 320px;
-    // margin: 0 auto;
+    border:none;
+    border-radius:0;
+    max-width: 400px;
     color: $white;
-    // letter-spacing: 2px;
-    border: solid 1px rgba(255,255,255,.9);
-    // border-radius: 4px;
-    background: none;
-    font-weight: 600;
-    cursor:pointer;
-    text-align: center;
+    background: $green;
     text-transform: uppercase;
-    padding: 1.5rem .5rem;
-    overflow: hidden;
+    padding: 1rem;
     position: relative;
-    z-index: 1;
     transition: all .3s ease;
-    &::before {
-        content: '';
-        position: absolute;
-        z-index: -1;
-        display: block;
-        left: 0;
-        bottom: 0;
-        height: 0;
-        width: 100%;
-        background: rgba(255,255,255,.9);
-        transition: all .4s cubic-bezier(.215,.61,.355,1);
-    }
     &::after {
-        content: '';
-        position: absolute;
-        z-index: -1;
-        height: 0;
-        left: 50%;
-        top: 50%;
-        width: 150%;
-        transition: all .75s ease;
+        font-size: .75rem;
+        content: '\f054';
+        font-family:'Font Awesome 5 Free';
+        font-weight: 900;
+        transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
+        position: relative;
+        top: -2px;
+        right: -.5rem;
     }
     &:hover {
-        color: $yellow;
-        &::before {
-            top: 0;
-            // bottom: auto;
-            height: 100%;
-        }
+        color: $white;
+        background: $dark-green;
         &::after {
-            height: 450%;
+            right: -1.25rem;
         }
     }
-    @include bp(sm) {
-        // font-size: .875rem;
-        // padding: 1rem;
-    }
 }
-
-// Social
-.social {
-    a {
-        display: inline-block;
-        margin: 0 .5rem;
-        font-size: 1.25rem;
-    }
-}
-
 
 /* FORM */
 form {
@@ -82,7 +43,6 @@ form {
         padding: 15px;
         border:none;
         border-bottom: 1px solid $white;
-        color: $white;
         background: none;
         transition: all .5s ease;
         &:focus {
@@ -92,29 +52,10 @@ form {
     textarea {
         height: 200px;
     }
-    .agreement {
-        color: $white;
-        margin-top: 2rem;
-        a {
-            color: $white;
-            &:hover {
-                color: $yellow;
-            }
-        }
-    }
-    span.agree {
-        display: inline-block;
-    }
     ::placeholder {
         font-style: normal;
         font-family: inherit;
         font-size: inherit;
-    }
-    .btn {
-        margin-top: 2rem;
-        @include bp(md) {
-            float: right;
-        }
     }
 }
 
